Revision history for {{$dist->name}}

{{$NEXT}}

0.002     2014-09-06 01:29:49Z
          - make one of the code paths more efficient
          - add more diagnostic messages
          - add missing version to prereq specification
          - extract the proper package name from a module when there are
            statements in the 'main' namespace
          - add more detailed documentation explaining the rationale behind
            this new metadata

0.001     2014-08-29 03:43:33Z
          - Initial release.