@@ -8,7 +8,7 @@ package Dist::Zilla::Plugin::AuthorityFromModule;
 use Moose;
 with 'Dist::Zilla::Role::MetaProvider';
 use Moose::Util::TypeConstraints 'role_type';
-use List::Util 'first';
+use List::Util 1.33 qw(first any);
 use Module::Metadata 1.000005;
 use namespace::autoclean;
 
@@ -26,7 +26,7 @@ has _module_name => (
         {
             if (my $file = first {
                     $_->name =~ m{^lib/} and $_->name =~ m{\.pm$}
-                    and $self->_package_from_file($_) eq $module }
+                    and any { $module eq $_ } $self->_packages_from_file($_) }
                 @{ $self->zilla->files })
             {
                 $self->log_debug('found \'' . $module . '\' in ' . $file->name);
@@ -39,7 +39,7 @@ has _module_name => (
         $self->log_debug('no module provided; defaulting to the main module');
 
         my $file = $self->zilla->main_module;
-        my $module = $self->_package_from_file($file);
+        my ($module) = $self->_packages_from_file($file);
         $self->log_debug('extracted package \'' . $module . '\' from ' . $file->name);
         $module;
     },
@@ -70,7 +70,7 @@ sub metadata
     };
 }
 
-sub _package_from_file
+sub _packages_from_file
 {
     my ($self, $file) = @_;
 
@@ -82,7 +82,7 @@ sub _package_from_file
             or $self->log_fatal('cannot open handle to ' . $file->name . ' content: ' . $!);
 
     my $mmd = Module::Metadata->new_from_handle($fh, $file->name);
-    first { $_ ne 'main' } $mmd->packages_inside;
+    grep { $_ ne 'main' } $mmd->packages_inside;
 }
 
 __PACKAGE__->meta->make_immutable;
